--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,17 @@
         <input type="text"  id="inputCity" placeholder="enter city">
         <button >Get Weather</button>
     </form>
+    <!-- language button -->
+     <div class="lang">
+        <select id="lang">
+            <option value="en">English</option>
+            <option value="fr">Français</option>
+            <option value="es">Español</option>
+            <option value="it">Italiano</option>
+            <option value="tr">Türkçe</option>
+            <option value="ar">العربية</option>
+        </select>
+    </div>
     <div id="container">
         <h1 id="city">Please enter a city</h1>
         <h1 id="tempurature"></h1>
